--- a/assets/Css/style.css
+++ b/assets/Css/style.css
@@ -445,12 +445,14 @@ img{
     width: 60%;
 }
 .skills__close .skills__list{
+    transition: all .4s ease-in-out;
     height: 0;
     overflow: hidden;
 }
 .skills__open .skills__list{
     height: max-content;
     margin-bottom: var(--mb-2-5);
+    transition: all .4s ease-in-out;
 }
 .skills__open .skills__arrow{
     transform: rotate(-180deg);
