--- a/assets/Css/style.css
+++ b/assets/Css/style.css
@@ -290,6 +290,8 @@ img{
     font-size: 1.25rem;
 
 }
+
+/*==================== BUTTONS ====================*/
 .button{
     display: inline-block;
     background-color: var(--first-color);
@@ -311,9 +313,19 @@ img{
     display: inline-flex;
     align-items: center;
 }
-
-/*==================== BUTTONS ====================*/
-
+.button--small{
+    padding: .75rem 1rem;
+}
+.button--link{
+    padding: 0;
+    background-color: transparent;
+    color: var(--first-color);
+    
+}
+.button--link:hover{
+    background-color: transparent;
+    color: var(--first-color-alt);
+}
 
 /*==================== ABOUT ====================*/
 
@@ -521,6 +533,58 @@ img{
     color: var(--first-color);
 }
 /*==================== SERVICES ====================*/
+
+.services__container{
+    gap: 1.5rem;
+    grid-template-columns: repeat(2, 1fr);
+}
+.services__content{
+    position: relative;
+    background-color: var(--container-color);
+    padding: 3.5rem .5rem 1.25rem 1.5rem;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, .15);
+    border-radius: .25rem;
+    transition: all .3s ease-in-out;
+}
+.services__content:hover{
+    box-shadow: 0 4px 8px rgba(0, 0, 0, .15);
+}
+.services__icon{
+    display: block;
+    font-size: 1.5rem;
+    color: var(--first-color);
+    margin-bottom: var(--mb-1);
+
+}
+.services__title{
+    font-size: var(--h3-font-size);
+    margin-bottom: var(--mb-1);
+    font-weight: var(--font-medium);
+}
+
+.services__button{
+    cursor: pointer;
+    font-size: var(--smaller-font-size);
+}
+.services__button:hover .button__icon{
+    transform: translateY(.25rem);
+}
+.services__modal{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, .5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 1rem;
+    z-index: var(--z-modal);
+    /* opacity: 0; */
+    /* visibility: hidden; */
+    transition: .3s;
+}
 
 
 /* Active Modal */
