--- a/assets/Css/style.css
+++ b/assets/Css/style.css
@@ -87,7 +87,7 @@ body{
     margin: 0 0 var(--header-height) 0;
     font-family: var(--body-font);
     font-size: var(--normal-font-size);
-    background-color: var(--body-color);
+    background-color: #f2eeef;
     color: var(--text-color);
 }
 h1,h2,h3,h4{
@@ -627,7 +627,28 @@ img{
 }
 /*==================== PORTFOLIO ====================*/
 
+.portfolio__container{
+    overflow: initial;
+}
+.portfolio__content{
+    padding: 0 1.5rem;
+}
+.portfolio__img{
+    width: 265px;
+    border-radius: .5rem;
+    justify-self: center;
+}
+.portfolio__title{
+    font-size: var(--h3-font-size);
+    margin-bottom: var(--mb-0-5);
 
+}
+.portfolio__description{
+    margin-bottom: var(--mb-0-75);
+}
+.portfolio__button:hover .button__icon{
+    transform: translateX(.25rem);
+}
 /*==================== PROJECT IN MIND ====================*/
 
 
